@@ -3,7 +3,6 @@
 - ibuf_ungetc
 - ibuf_geti
 - ibuf_getstr
-- ibuf_getnetstring
 
 - add flushchar to obuf
 - set flushchar to \n on stdout, stderr
